legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr68090.c-5.4.0-1.out.txt
pr68090.c: In function ‘fn’:
pr68090.c:8:3: error: compound literal has variable size
   (int[(0, 1)]) { 0 };  
   ^
pr68090.c:8: confused by earlier errors, bailing out
